--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "react-scripts": "1.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "concurrently \"react-scripts start\" \"npm run rest\"",
+    "rest": "json-server --watch --port 4000 db.json",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "concurrently": "^3.5.1",
+    "json-server": "^0.12.1"
   }
 }
